--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,13 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@layer utilities {
+    .border-10 {
+      border-width: 10px;
+    }
+  
+    .rounded-5 {
+      border-radius: 5px;
+    }
+  }
+  
